actually verify the password